// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`world-mutations create world 1`] = `
Object {
  "data": Object {
    "createWorld": Object {
      "_id": Any<String>,
      "wikiPage": Object {
        "_id": Any<String>,
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`world-mutations create world no permissions 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: You do not have the required permission: Create world access],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`world-mutations needs existing world create pin 1`] = `
Object {
  "data": Object {
    "createPin": Object {
      "_id": Any<String>,
      "pins": Array [
        Object {
          "_id": Any<String>,
          "canWrite": true,
          "map": Object {
            "_id": Any<String>,
            "name": "Earth",
          },
          "page": Object {
            "_id": Any<String>,
            "name": "Earth",
          },
          "x": 0,
          "y": 0,
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`world-mutations needs existing world create pin no permission 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: You do not have permission to add pins to this map],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`world-mutations needs existing world needs existing pin delete pin 1`] = `
Object {
  "data": Object {
    "deletePin": Object {
      "_id": Any<String>,
      "pins": Array [],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`world-mutations needs existing world needs existing pin delete pin no permission 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: You do not have permission to delete this pin],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`world-mutations needs existing world needs existing pin update pin 1`] = `
Object {
  "data": Object {
    "updatePin": Object {
      "_id": Any<String>,
      "pins": Array [
        Object {
          "_id": Any<String>,
          "canWrite": true,
          "map": Object {
            "_id": Any<String>,
            "name": "Earth",
          },
          "page": Object {
            "_id": Any<String>,
            "name": "other place",
          },
          "x": 0,
          "y": 0,
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`world-mutations needs existing world needs existing pin update pin no permission 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: You do not have permission to update this pin],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`world-mutations needs existing world rename world 1`] = `
Object {
  "data": Object {
    "renameWorld": Object {
      "_id": Any<String>,
      "name": "Azeroth",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`world-mutations needs existing world rename world no permission 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: You do not have permission to rename this world],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
